# openapi.yaml
@@ -84,6 +84,45 @@ paths:
         "200":
           description: Ok.
 
+  /{id}/features:
+    get:
+      summary: get pluses and minuses of certain park
+      operationId: getFeatures
+      parameters:
+        - $ref: "#/components/parameters/idPathParam"
+      responses:
+        "200":
+          description: Ok.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FeatureMap"
+    post:
+      summary: save pluses and minuses of new park
+      operationId: saveFeatures
+      parameters:
+        - $ref: "#/components/parameters/idPathParam"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FeatureMap'
+      responses:
+        "200":
+          description: Ok.
+    put:
+      summary: update pluses and minuses of the park
+      operationId: updateFeatures
+      parameters:
+        - $ref: "#/components/parameters/idPathParam"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FeatureMap'
+      responses:
+        "200":
+          description: Ok.
 
 
 components:
@@ -116,6 +155,27 @@ components:
           type: number
           format: double
           example: 20.971988
+    FeatureMap:
+      type: object
+      properties:
+        pluses:
+          type: array
+          items:
+            $ref: '#/components/schemas/Feature'
+        minuses:
+          type: array
+          items:
+            $ref: '#/components/schemas/Feature'
+    Feature:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          example: 1
+        description:
+          type: string
+          example: "plac zabaw"
   parameters:
     latitudeQueryParam:
       name: latitude
